# learnOpenGL

./: CMakeLists.txt  README.md
lib/glad/: cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: input.c  input.h  main.c  utils.c  utils.h
